粗略的消息协议添加成功

--- a/Basecode/Makefile
+++ b/Basecode/Makefile
@@ -1,5 +1,13 @@
-client : Client.cpp
-	g++ ./Client.cpp -lboost_serialization -o client
+client : Client.cpp Message.o
+	g++ -c Client.cpp -g
+	g++ ./Client.o ./Message.o -lboost_serialization -o client
 
-server : Server.cpp
-	g++ ./Server.cpp -lboost_serialization -o server
+server : Server.cpp Message.o
+	g++ -c -g Server.cpp
+	g++ ./Server.o ./Message.o -lboost_serialization -o server
+
+Message : Message.cpp
+	g++ -c Message.cpp
+
+clean : 
+	rm client server
