封装了EPOLLMINE类，类成员分别实现了run_client和run_server

--- a/Basecode/Makefile
+++ b/Basecode/Makefile
@@ -1,13 +1,22 @@
 client : Client.cpp Message.o
 	g++ -c Client.cpp -g
-	g++ ./Client.o ./Message.o -lboost_serialization -o client
+	g++ ./Client.o ./Message.o ./EPOLL_MINE.o -lboost_serialization -o client
 
 server : Server.cpp Message.o
 	g++ -c -g Server.cpp
-	g++ ./Server.o ./Message.o -lboost_serialization -o server
+	g++ ./Server.o ./Message.o ./EPOLL_MINE.o -lboost_serialization -o server
 
 Message : Message.cpp
 	g++ -c Message.cpp
 
+EPOLL_MINE : EPOLLMINE.cpp
+	g++ -c EPOLLMINE.cpp
+
 clean : 
 	rm client server
+
+all : Message.o EPOLL_MINE.o Client.cpp Server.cpp
+	g++ -c Client.cpp -g
+	g++ ./Client.o ./Message.o ./EPOLL_MINE.o -lboost_serialization -o client
+	g++ -c -g Server.cpp
+	g++ ./Server.o ./Message.o ./EPOLL_MINE.o -lboost_serialization -o server
